# fluentd-plugin-mdsd

./: .gitignore  CONTRIBUTING.md  CredScanSuppressions.json  Dockerfile  LICENSE.txt  OneBranch.Official.yml  PolicheckExclusion.xml  README.md  README_mdm.md  devenv.ps1  devenv.sh  global.gdnbaselines  global.gdnsuppress  tsaoptions.json
.config/: tsaoptions.json
src/: CMakeLists.txt  buildall.sh
src/debpkg/: Makefile  changelog  control  copyright  lintian-overrides
src/fluent-plugin-mdm/: Makefile  README.txt  fluent-plugin-mdm.gemspec  out_mdm_sample.conf
src/fluent-plugin-mdm/lib/fluent/plugin/: out_mdm.rb
src/fluent-plugin-mdsd/: Makefile  README.md  fluent-plugin-mdsd.gemspec  gemspec-template  mdsdCfg_sample.xml  out_mdsd_sample.conf  out_mdsd_sample2_for_syslog.conf  out_mdsd_sample_for_filelog.conf  out_mdsd_sample_for_syslog.conf  outmdsd.gemspec
src/fluent-plugin-mdsd/lib/fluent/plugin/: out_mdsd.rb
src/fluent-plugin-mdsd/test/plugin/: test_out_mdsd.rb
src/ifxext/: CMakeLists.txt  Makefile  Makefile.swig  ifxext.cxx  ifxext.h  ifxext.i  ifxext_wrap.cxx  wrap_memcpy.c
src/outmdsd/: BufferedLogger.cc  BufferedLogger.h  CMakeLists.txt  ConcurrentMap.cc  ConcurrentMap.h  ConcurrentQueue.h  DataReader.cc  DataReader.h  DataResender.cc  DataResender.h  DataSender.cc  DataSender.h  DjsonLogItem.cc  DjsonLogItem.h  EtwLogItem.h  Exceptions.h  FileLogger.cc  FileLogger.h  FileTracer.cc  FileTracer.h  ILogger.h  ITracer.h  IdMgr.cc  IdMgr.h  LogItem.cc  LogItem.h  LogItemPtr.h  SockAddr.cc  SockAddr.h  SocketClient.cc  SocketClient.h  SocketLogger.cc  SocketLogger.h  SyslogTracer.cc  SyslogTracer.h  Trace.cc  Trace.h  TraceMacros.h
src/outmdsdrb/: CMakeLists.txt  outmdsd_log.cxx  outmdsd_log.h  outmdsdrb.i
src/package/: Makefile  changelog  control  copyright  lintian-overrides  postinst
src/plugin/: CMakeLists.txt  out_mdm.rb
src/test/: CMakeLists.txt  ifxtest.rb  parseglibc.py  runtests.sh  testpluginrb.sh
src/test/ifxtest/: CMakeLists.txt  ifxtest.rb
src/test/outmdsd/: CMakeLists.txt  CounterCV.h  MockServer.cc  MockServer.h  mockserver_main.cc  testbuflog.cc  testlogger.cc  testlogitem.cc  testmap.cc  testqueue.cc  testreader.cc  testresender.cc  testsender.cc  testsocket.cc  testtrace.cc  testutil.cc  testutil.h  utmain.cc
src/test/outmdsdrb/: mdsdlogger.rb  mdsdtest.rb
